@@ -21,7 +21,9 @@ ui_cm_opt2_desc=If this issue occurs for all words then kindly change settings t
 
 #ui classic mode error
 ui_cl_error_title=was not found,
-ui_cl_error_alt=try following suggestions
+ui_cl_error_alt=please try following suggestions (click on link)
+ui_cl_error_spell=Error in lookup, please try manual search
+ui_cl_try_other_dict=Please try to search using other dictionary (click on link)
 
 # ajax
 ajax_loading=Loading...
